2004-02-25  Richard Earnshaw  <rearnsha@arm.com>

	* arm.c (arm_legitimate_index_p): For QImode the range of an offset
	is -4095...+4095 inclusive.

2004-02-25  Eric Botcazou  <ebotcazou@libertysurf.fr>

	* doc/install.texi (sparc-sun-solaris2* specific notes): Document
	the bootstrap failure with Sun CC 5.4 and 5.5.

2004-02-24  Kazu Hirata  <kazu@cs.umass.edu>

	* cse.c (cse_change_cc_mode_insns): Stop at any instruction
	which modifies NEWREG.
	(cse_condition_code_reg): Update the mode of CC_REG in
	CC_SRC_INSN on our own.

2004-02-24  Michael Matz  <matz@suse.de>

	* config/i386/i386.c (ix86_comp_type_attributes): Check for
	regparm attributes.

2004-02-24  Aldy Hernandez  <aldyh@redhat.com>

        * config/rs6000/spe.md (spe_fix_truncsfsi2): Delete.
        (spe_fixuns_truncsfsi2): Delete.

        * config/rs6000/rs6000.md (fix_truncsfsi2): Delete.
        (fixuns_truncsfsi2): Delete.

2004-02-24  Josef Zlomek  <zlomekj@suse.cz>

	PR/14240
	* rtlanal.c (replace_label): Fix replacing labels in constant pool.

2004-02-24  Bob Wilson  <bob.wilson@acm.org>

	* config/xtensa/xtensa-protos.h (xtensa_copy_incoming_a7): Update.
	(init_cumulative_args): Likewise.
	(a7_overlap_mentioned_p): Delete prototype.
	* config/xtensa/xtensa.c (struct machine_function): Replace
	incoming_a7_copied field with need_a7_copy and vararg_a7 flags.
	Add set_frame_ptr_insn field.
	(xtensa_emit_move_sequence): Update call to xtensa_copy_incoming_a7.
	(xtensa_copy_incoming_a7): Rewrite to check need_a7_copy flag and check
	if the operand is an argument in a7.  If so, copy a7 to a new pseudo
	at the function entry and replace the operand with the pseudo.
	(init_cumulative_args): Remove unused arguments.  Add new "incoming"
	argument and record this flag in CUMULATIVE_ARGS.
	(function_arg): Remove result_mode and special-case code to handle
	arguments in a7.  Instead, set need_a7_copy flag when there is an
	incoming argument in a7.